EKS-with-LoadBalancer-Controller/kube-manifests-ingress-basics/Nginx-App1-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app3-nginx-deployment
  labels: 
   app: app3-nginx
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: app3-nginx
  template:
    metadata:
      name: app3-nginx
      labels:
        app: app3-nginx  
    spec:
      containers: 
        - name: app3-nginx
          image: stacksimplify/kubenginx:1.0.0
          ports:
           - containerPort: 80
         
---
apiVersion: v1
kind: Service
metadata:
  name: app3-nginx-nodeport-service
  labels:
   app: app3-nginx
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
#    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:  
  selector:
   app : app3-nginx
  type: NodePort 
  ports:
   - port: 80
     targetPort: 80
